--- a/.gitmodules
+++ b/.gitmodules
@@ -19,3 +19,6 @@
 [submodule "redshift"]
 	path = redshift
 	url = git@github.com:jonls/redshift.git
+[submodule "node-music-player"]
+	path = node-music-player
+	url = https://github.com/benkaiser/node-music-player
