Add go submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -25,3 +25,6 @@
 [submodule "Hound"]
 	path = Hound
 	url = https://github.com/etsy/Hound
+[submodule "go"]
+	path = go
+	url = git@github.com:golang/go.git
